--- a/CSS Basics/styles.css
+++ b/CSS Basics/styles.css
@@ -1,24 +1,32 @@
+body{
+    background-image: linear-gradient(rgb(153, 125, 190), lightcyan);
+    background-repeat: no-repeat;
+}
+
 .color-example {
     color: darkcyan;
     text-shadow: 1px 1px;
-    background-color: crimson;
-    border-style: solid; border-width: 5px; border-color: black;
+    background-color: mintcream;
+    border-style: solid; border-width: 1px; border-color: black;
 }
 
 .header-example {
     font-size: 16;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: darkblue
+    color: darkblue;
+    border: solid 2px red;
+    border-radius: 10px;
 }
 
 .list-example {
     list-style:lower-greek;
-    color: green;
+    color: rgb(5, 80, 60);
 }
 
 .text-example {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 11;
+    margin-left: 100px;
     text-transform: capitalize;
     text-decoration: underline;
 }
@@ -27,4 +35,18 @@
     background-color: aquamarine;
     border-style: ridge;
     border-color: blueviolet;
+}
+
+.flashy-para {
+    border-style: dotted;
+    border-radius: 20px;
+    border-color: blue;
+}
+
+.flashy-header {
+    border-style: dashed;
+    border-color: aqua;
+    border-radius: 15px;
+    padding-left: 15px;
+    margin-left: 50px;
 }
