--- a/WebDesign/styles.css
+++ b/WebDesign/styles.css
@@ -1,24 +1,26 @@
 body{
     background-color: lightgrey;
-    max-width: 90%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 article {
     background-color:antiquewhite;
-    width: 60%;
     padding: 15px;
 }
 
 section{
     background-color: azure;
-    width: 60%;
     padding: 15px;
     
 }
 
 aside{
     background-color: beige;
-    max-width: 30%;
     padding: 15px;
-    
+}
+
+footer{
+    padding-top: 20px;
 }
